deploy/overlays/production/ingress-patch.yaml
# Production hostname and TLS secret.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-on-kubernetes-ingress
  namespace: ghost-on-kubernetes
spec:
  tls:
    - hosts:
        - blog.example.com
      secretName: tls-secret
  rules:
    - host: blog.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ghost-on-kubernetes-service
                port:
                  name: ghk8s
